--- a/Sales_NET8.Web/Views/Countries/Details.cshtml
+++ b/Sales_NET8.Web/Views/Countries/Details.cshtml
@@ -7,15 +7,7 @@
 <h1>Detalhes</h1>
 
 <div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+    <partial name="_CountryDetails" />
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Editar</a>
