--- a/Sales_NET8.Web/Views/Countries/Index.cshtml
+++ b/Sales_NET8.Web/Views/Countries/Index.cshtml
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<h1>Lista de Países</h1>
+<h1>Lista de Países - Edit Test</h1>
 
 @if (TempData["SuccessMessage"] != null)
 {
@@ -32,7 +32,7 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
-                            <th style="text-align: right;"></th>
+                            <th style="text-align: right"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -42,7 +42,7 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
-                                <td style="text-align: right;">
+                                <td style="text-align: right">
                                     <div class="btn-group" role="group">
                                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
                                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">Detalhes</a>
