--- a/Sales_NET8.Web/Views/Categories/Edit.cshtml
+++ b/Sales_NET8.Web/Views/Categories/Edit.cshtml
@@ -1,20 +1,21 @@
-﻿@model Sales_NET8.Web.Data.Entities.Country
+﻿@model Sales_NET8.Web.Data.Entities.Category
 
 @{
-    ViewData["Title"] = "Inserir";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Inserir País</h1>
+<h1>Editar Categoria</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <partial name="_Country" model="Model" />
+            <input type="hidden" asp-for="Id" />
+            <partial name="_Category" model="Model" />
             <br />
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-success">Voltar para a Lista</a>
             </div>
         </form>
