--- a/Sales_NET8.Web/Views/Categories/Index.cshtml
+++ b/Sales_NET8.Web/Views/Categories/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model IEnumerable<Sales_NET8.Web.Data.Entities.Country>
+﻿@model IEnumerable<Sales_NET8.Web.Data.Entities.Category>
 
 @{
-    ViewData["Title"] = "Países";
+    ViewData["Title"] = "Categorias";
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<h1>Lista de Países</h1>
+<h1>Lista de Categorias</h1>
 
 @if (TempData["SuccessMessage"] != null)
 {
@@ -16,14 +16,14 @@
 }
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary">Criar Novo</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Criar Nova</a>
 </p>
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Países</h3>
+                <h3 class="panel-title">Categorias</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
@@ -37,7 +37,7 @@
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
-                            {
+                        {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
@@ -50,33 +50,30 @@
                                     </div>
                                 </td>
                             </tr>
-                            }
+                        }
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () 
-        {
-            $('#MyTable').DataTable(
-                { 
-                    "language": 
-                {
+        $(document).ready(function () {
+            $('#MyTable').DataTable({
+                "language": {
                     "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese.json"
                 },
-                "aLengthMenu": 
-                [
+                "aLengthMenu": [
                     [20, 50, 100, 200, -1],
                     [20, 50, 100, 200, "Todos"]
                 ]
-                });
+            });
         });
     </script>
-    }
+}
