--- a/Sales_NET8.Web/Views/Shared/_Layout.cshtml
+++ b/Sales_NET8.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link" asp-area="" asp-controller="Countries" asp-action="Index">Países</a>
                         </li>
                         <li class="nav-item me-3">
+                            <a class="nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                        </li>
+                        <li class="nav-item me-3">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a>
                         </li>
                     </ul>
